add fotnlp.jpg styled css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,10 @@ form {
 #sfexa{
     height:200px;
     width: 200px;
-    
-    
+}
+#fotnlp{
+    height: 200px;
+        width: 200px;
+        display: -webkit-box;
+        margin-left: auto;
 }
