add more preview images and css style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,3 +108,15 @@ form {
         display: -webkit-box;
         margin-left: auto;
 }
+
+#ff6
+{height:200px;
+width: auto;
+}
+
+#ffg{
+    height: 200px;
+        width: 200px;
+        display: -webkit-box;
+        margin-left: auto;
+}
