--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,12 +68,12 @@ img  {
     width: 100%;
     overflow: hidden;
     margin: auto;
-    margin-bottom: 10px;
     border-width: 5px;
 }
 
 .navbar-nav {
     margin-left: 80%;
+    
 }
 .nav-link:active .btn:hover {
     color: #fafa03;
@@ -96,6 +96,11 @@ form {
 #suggestion-box{
     width: 480px;
     height: 121px;
+}
+.submit-btn{
+    border-color: rgb(250, 250, 3, 0.5);
+    border-radius: 2px;
+    color: black
 }
 
 #sfexa{
@@ -134,4 +139,10 @@ width: auto;
 #baroque{
     height: 200px;
         width: auto;
+}
+
+.embvideo /*looking good but could do with restyling to ensure that it is in the center*/
+{
+    align-content: center center no-repeat;
+    margin-left: 29%;
 }
