--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body p {
     color: white;
     font-family: Roboto, sans-serif;
     font-weight: 300;
+    margin: 10px;
 }
 
 body .h1 {
@@ -79,6 +80,11 @@ body .h6 {
     color: #fafa03;
     background-color: #61777F;
 }
+.nav-link.active {
+    color: #fafa03;
+    
+}
+
 /*https: //stackoverflow.com/questions/8097744/how-do-i-center-this-form-in-css*/
 div.form {
     display: block;
@@ -98,12 +104,6 @@ form {
     width: 480px;
     height: 121px;
 }
-.submit-btn{
-    border-color: rgb(250, 250, 3, 0.5);
-    border-radius: 2px;
-    color: black
-}
-
 #sfexa{
     height:200px;
     width: 200px;
@@ -150,4 +150,105 @@ width: auto;
 
 .bg-image{
  height: auto;
+}
+
+.modal /*https: //www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal2*/
+{
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: black;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #61777F;
+
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #61777F;
+    color: white;
+}
+
+.modal-body {
+    padding: 2px 16px;
+}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #61777F;
+    color: white;
+}
+#myBtn{
+    border-color: rgb(250, 250, 3, 0.5);
+    border-radius: 2px;
+    color: black
 }
