--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ body p {
     font-family: Roboto, sans-serif;
     font-weight: 300;
     margin: 10px;
+    padding: 10px;
 }
 
 body .h1 {
@@ -252,6 +253,10 @@ width: auto;
 }
 #myBtn{
     border-color: rgb(250, 250, 3, 0.5);
-    border-radius: 2px;
+    border-radius: 6px;
+    width: 200px;
     color: black
+}
+#myBtn:hover{
+border-color: #f61313;
 }
