add change to links _blank

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,8 @@ body {
     overflow: hidden;
     margin: auto;
     display: block;
-        max-width: fit-content;
-        height: auto;
+    max-width: fit-content;
+    height: auto;
 }
 
 body p {
@@ -58,7 +58,7 @@ body .h6 {
     text-align: center;
 }
 
-.img  {
+.img {
     display: block;
     max-width: fit-content;
     height: auto;
@@ -75,22 +75,28 @@ body .h6 {
 
 .navbar-nav {
     margin-left: 80%;
-    width:auto;
+    width: auto;
     height: auto;
-    
+    overflow: hidden;
+
 }
-.nav-link:active a:hover{
+
+.nav-link:active a:hover {
     color: #fafa03;
 }
+
 #home:hover {
-    color:#f61313;
+    color: #f61313;
 }
-#preview:hover{
+
+#preview:hover {
     color: #06f8f4;
 }
-#subscribe:hover{
-    color:#ff97d0;
+
+#subscribe:hover {
+    color: #ff97d0;
 }
+
 /*https: //stackoverflow.com/questions/8097744/how-do-i-center-this-form-in-css*/
 div.form {
     display: block;
@@ -106,60 +112,68 @@ form {
     margin-left: 20%;
 }
 
-#suggestion-box{
+#suggestion-box {
     width: 480px;
     height: 121px;
 }
-#sfexa{
-    height:200px;
+
+#sfexa {
+    height: 200px;
     width: 200px;
 }
-#fotnlp{
+
+#fotnlp {
     height: 200px;
-        width: 200px;
-        display: -webkit-box;
-        margin-left: auto;
+    width: 200px;
+    display: -webkit-box;
+    margin-left: auto;
 }
 
-#ff6
-{height:200px;
-width: auto;
+#ff6 {
+    height: 200px;
+    width: auto;
 }
 
-#ffg{
+#ffg {
     height: 200px;
-        width: 200px;
-        display: -webkit-box;
-        margin-left: auto;
-}
-#hp { 
-    height: 200px;
-        width: auto;
+    width: 200px;
+    display: -webkit-box;
+    margin-left: auto;
 }
 
-#konami{
+#hp {
     height: 200px;
-        width: 200px;
-        display: -webkit-box;
-        margin-left: auto;
-}
-#baroque{
-    height: 200px;
-        width: auto;
+    width: auto;
 }
 
-.embed-responsive-item /*looking good but could do with restyling to ensure that it is in the center*/
-{
+#konami {
+    height: 200px;
+    width: 200px;
+    display: -webkit-box;
+    margin-left: auto;
+}
+
+#baroque {
+    height: 200px;
+    width: auto;
+}
+
+.embed-responsive-item
+
+/*looking good but could do with restyling to ensure that it is in the center*/
+    {
     align-content: center center no-repeat;
     margin-left: 38%;
 }
 
-.bg-image{
- height: auto;
+.bg-image {
+    height: auto;
 }
 
-.modal /*https: //www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal2*/
-{
+.modal
+
+/*https: //www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal2*/
+    {
     display: none;
     /* Hidden by default */
     position: fixed;
@@ -253,12 +267,14 @@ width: auto;
     background-color: #61777F;
     color: white;
 }
-#myBtn{
+
+#myBtn {
     border-color: rgb(250, 250, 3, 0.5);
     border-radius: 6px;
     width: 200px;
     color: black
 }
-#myBtn:hover{
-border-color: #f61313;
+
+#myBtn:hover {
+    border-color: #f61313;
 }
