--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,18 +98,23 @@ body .h6 {
 }
 
 /*https: //stackoverflow.com/questions/8097744/how-do-i-center-this-form-in-css*/
-div.form {
-    display: block;
-    text-align: center;
-    color: #fafa03;
+
+#subscribe-form {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+        color: #fafa03;
+            font-weight: 900;
 }
 
-form {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-    margin-left: 20%;
+.form-row {
+    display: flex;
+    justify-content: space-between;
 }
 
 #suggestion-box {
