--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,7 +270,7 @@ body .h6 {
 .modal-footer {
     padding: 2px 16px;
     background-color: #61777F;
-    color: white;
+    color: #ffffff;
 }
 
 #myBtn {
@@ -283,3 +283,4 @@ body .h6 {
 #myBtn:hover {
     border-color: #f61313;
 }
+
