--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,239 +73,243 @@ body .h6 {
     border-width: 5px;
 }
 
-.navbar-nav {
-    margin-left: 80%;
-    width: auto;
-    height: auto;
-    overflow: hidden;
-
-}
-
-.nav-link:active a:hover {
-    color: #fafa03;
-}
-
-#home:hover {
-    color: #f61313;
-}
-
-#preview:hover {
-    color: #06f8f4;
-}
-
-#subscribe:hover {
-    color: #ff97d0;
-}
-
-/*https: //stackoverflow.com/questions/8097744/how-do-i-center-this-form-in-css*/
-
-#subscribe-form {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
-    margin-left: 20%;
-    margin-right: 20%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    color: #fafa03;
-    font-weight: 900;
-
-}
-.form-row {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-#suggestion-box {
-    width: 480px;
-    height: 121px;
-}
-
-#sfexa {
-    height: 200px;
-    width: 200px;
-}
-
-#fotnlp {
-    height: 200px;
-    width: 200px;
-    display: -webkit-box;
-    margin-left: auto;
-}
-
-#ff6 {
-    height: 200px;
-    width: auto;
-}
-
-#ffg {
-    height: 200px;
-    width: 200px;
-    display: -webkit-box;
-    margin-left: auto;
-}
-
-#hp {
-    height: 200px;
-    width: auto;
-}
-
-#konami {
-    height: 200px;
-    width: 200px;
-    display: -webkit-box;
-    margin-left: auto;
-}
-
-#baroque {
-    height: 200px;
-    width: auto;
-}
-
-.embed-responsive-item
-
-/* (sfexa video)looking good but could do with restyling to ensure that it is in the center*/
-    {
-    align-content: center center no-repeat;
-    margin-left: 38%;
-}
-
-.bg-image {
-    height: auto;
-}
-
-.modal
-
-/*https: //www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal2*/
-    {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    padding-top: 100px;
-    /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-    position: relative;
-    background-color: black;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #61777F;
-
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
-
-/* Add Animation */
-@-webkit-keyframes animatetop {
-    from {
-        top: -300px;
-        opacity: 0
+@media screen and (min-width: 373px) and (max-width: 1368px) {
+    .navbar-nav {
+        margin-left: 80%;
+        width: auto;
+        height: auto;
+        overflow: hidden;
     }
 
-    to {
-        top: 0;
-        opacity: 1
-    }
-}
-
-@keyframes animatetop {
-    from {
-        top: -300px;
-        opacity: 0
+    .nav-link:active a:hover {
+        color: #fafa03;
     }
 
-    to {
-        top: 0;
-        opacity: 1
+    #home:hover {
+        color: #f61313;
     }
-}
 
-/* The Close Button */
-.close {
-    color: white;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.modal-header {
-    padding: 2px 16px;
-    background-color: #61777F;
-    color: white;
-}
-
-.modal-body {
-    padding: 2px 16px;
-}
-
-.modal-footer {
-    padding: 2px 16px;
-    background-color: rgb(97, 119, 127);
-    color: #ffffff;
-}
-
-#myBtn {
-    border-color: rgb(250, 250, 3, 0.5);
-    border-radius: 6px;
-    width: 200px;
-    color: black
-}
-
-#myBtn:hover {
-    border-color: #f61313;
-}
-
-@media all and (max-width: 1368px) and (min-width: 376px) {
-    .text-break {
-        color: white;
-        font-family: Roboto, sans-serif;
-        font-weight: 300;
-        margin: 3px;
-        padding: 1px;
+    #preview:hover {
+        color: #06f8f4;
     }
-}
 
-/* work on this*/
-@media all and (max-width: 1368px) and (min-width: 375px) {
-    .image-thumbnail-right {
+    #subscribe:hover {
+        color: #ff97d0;
+    }
+
+    /*https: //stackoverflow.com/questions/8097744/how-do-i-center-this-form-in-css*/
+
+    #subscribe-form {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: center;
+        margin-left: 20%;
+        margin-right: 20%;
+        padding-top: 5%;
+        padding-bottom: 5%;
+        color: #fafa03;
+        font-weight: 900;
+
+    }
+
+    .form-row {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    #suggestion-box {
+        width: 480px;
+        height: 121px;
+    }
+
+    #sfexa {
         height: 200px;
         width: 200px;
-        display: flex;
-        align-items: right;
-        justify-content: center;
+    }
+
+    #fotnlp {
+        height: 200px;
+        width: 200px;
+        display: -webkit-box;
         margin-left: auto;
     }
-}
-.github-socials{
-    float: right;
+
+    #ff6 {
+        height: 200px;
+        width: auto;
+    }
+
+    #ffg {
+        height: 200px;
+        width: 200px;
+        display: -webkit-box;
+        margin-left: auto;
+    }
+
+    #hp {
+        height: 200px;
+        width: auto;
+    }
+
+    #konami {
+        height: 200px;
+        width: 200px;
+        display: -webkit-box;
+        margin-left: auto;
+    }
+
+    #baroque {
+        height: 200px;
+        width: auto;
+    }
+
+    @media screen and (min-width: 373px) and (max-width: 1368px) {
+        .embed-responsive-item
+        /* (sfexa video)looking good but could do with restyling to ensure that it is in the center*/
+
+            {
+            margin-left: 38%;
+        }
+    }
+
+    .bg-image {
+        height: auto;
+    }
+
+    .modal
+
+    /*https: //www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal2*/
+        {
+        display: none;
+        /* Hidden by default */
+        position: fixed;
+        /* Stay in place */
+        z-index: 1;
+        /* Sit on top */
+        padding-top: 100px;
+        /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%;
+        /* Full width */
+        height: 100%;
+        /* Full height */
+        overflow: auto;
+        /* Enable scroll if needed */
+        background-color: rgb(0, 0, 0);
+        /* Fallback color */
+        background-color: rgba(0, 0, 0, 0.4);
+        /* Black w/ opacity */
+    }
+
+    /* Modal Content */
+    .modal-content {
+        position: relative;
+        background-color: black;
+        margin: auto;
+        padding: 0;
+        border: 1px solid #61777F;
+
+        width: 80%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        -webkit-animation-name: animatetop;
+        -webkit-animation-duration: 0.4s;
+        animation-name: animatetop;
+        animation-duration: 0.4s
+    }
+
+    /* Add Animation */
+    @-webkit-keyframes animatetop {
+        from {
+            top: -300px;
+            opacity: 0
+        }
+
+        to {
+            top: 0;
+            opacity: 1
+        }
+    }
+
+    @keyframes animatetop {
+        from {
+            top: -300px;
+            opacity: 0
+        }
+
+        to {
+            top: 0;
+            opacity: 1
+        }
+    }
+
+    /* The Close Button */
+    .close {
+        color: white;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    .modal-header {
+        padding: 2px 16px;
+        background-color: #61777F;
+        color: white;
+    }
+
+    .modal-body {
+        padding: 2px 16px;
+    }
+
+    .modal-footer {
+        padding: 2px 16px;
+        background-color: rgb(97, 119, 127);
+        color: #ffffff;
+    }
+
+    #myBtn {
+        border-color: rgb(250, 250, 3, 0.5);
+        border-radius: 6px;
+        width: 200px;
+        color: black
+    }
+
+    #myBtn:hover {
+        border-color: #f61313;
+    }
+
+    @media all and (max-width: 1368px) and (min-width: 376px) {
+        .text-break {
+            color: white;
+            font-family: Roboto, sans-serif;
+            font-weight: 300;
+            margin: 3px;
+            padding: 1px;
+        }
+    }
+
+    /* work on this*/
+    @media all and (max-width: 1368px) and (min-width: 375px) {
+        .image-thumbnail-right {
+            height: 200px;
+            width: 200px;
+            display: flex;
+            align-items: right;
+            justify-content: center;
+            margin-left: auto;
+        }
+    }
+
+    .github-socials {
+        float: right;
+    }
 }
