--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ body {
 }
 
 #logo {
-    height: 400px;
     width: 400px;
     overflow: hidden;
     margin: auto;
@@ -73,14 +72,14 @@ body .h6 {
     border-width: 5px;
 }
 
-@media screen and (min-width: 373px) and (max-width: 1368px) {
+@media screen and (min-width: 0px) and (max-width: 1368px) {
     .navbar-nav {
         margin-left: 80%;
         width: auto;
         height: auto;
         overflow: hidden;
     }
-
+    
     .nav-link:active a:hover {
         color: #fafa03;
     }
@@ -98,7 +97,6 @@ body .h6 {
     }
 
     /*https: //stackoverflow.com/questions/8097744/how-do-i-center-this-form-in-css*/
-
     #subscribe-form {
         display: flex;
         flex-direction: column;
@@ -110,13 +108,29 @@ body .h6 {
         padding-bottom: 5%;
         color: #fafa03;
         font-weight: 900;
-
     }
-
+         @media screen and (min-width: 373px) and (max-width: 1368px) {
+             #subscribe-form {
+                 display: flex;
+                 flex-direction: column;
+                 flex-wrap: wrap;
+                 align-content: center;
+                 margin-left: 20%;
+                 margin-right: 20%;
+                 padding-top: 5%;
+                 padding-bottom: 5%;
+                 color: #fafa03;
+                 font-weight: 900;
+                 align-items: center;
+             }  
+             }
+    @media screen and (min-width: 373px) and (max-width: 1368px) {
     .form-row {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         width: 100%;
+    }
     }
 
     #suggestion-box {
@@ -160,16 +174,21 @@ body .h6 {
         width: auto;
     }
 
-    @media screen and (min-width: 373px) and (max-width: 1368px  !important) {
+    @media screen and (min-width: 373px) and (max-width: 1368px) {
         .embed-responsive-item 
-        /* (sfexa video)looking good but could do with restyling to ensure that it is in the center*/
         {   
             margin-left: 38%;
             padding: 1px;
             display: flex;
+            overflow: hidden;
         }
-    }
-
+    
+   @media (max-width:320px) {
+       .embed-responsive-item {
+           width: 65%;
+           height: 180px;
+       }
+   }
     .bg-image {
         height: auto;
     }
@@ -293,7 +312,7 @@ body .h6 {
         }
     }
 
-    /* work on this*/
+    
     @media all and (max-width: 1368px) and (min-width: 375px) {
         .image-thumbnail-right {
             height: 200px;
