--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,12 +88,13 @@ body .h6 {
     margin: auto;
     border-width: 5px;
 }
-@include media-breakpoint-up(lg){
+@media (min-width: 992px){
 .navbar-nav {
     margin-left: 80%;
     width: auto;
     height: auto;
     overflow: hidden;
+    
 }
 }
 .nav-link:active a:hover {
