--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,8 @@ body .h6 {
 
 .preview-text-2 {
     padding-bottom: 10px;
+    padding-top: 10px;
+    margin-bottom: 2px;
 }
 
 @media screen and (min-width: 373px) and (max-width: 1368px) {
@@ -379,5 +381,5 @@ body .h6 {
 .navbar-brand {
     color: #61777F;
     font-style: italic;
-    font-weight: 600;
+    font-weight: 400;
 }
